# remote-build-server

./: .gitignore  BUILD  Implementing Go Bazelisk Wrapper.md  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-remote-build-server  bazel-testlogs  go.mod  go.sum  rules_jvm_external++maven+maven_install.json  technical-spec.MD  tools.go
agent/: BUILD  README.md
agent/src/: main.go
agent/src/main/proto/: runner.proto
docs/: architecture.md  architecture_proposal_grpc_proxy.md  lifecycle_concerns.md  production_architecture.md  test_architecture.md  threat_model.md
e2e/: BUILD  kind_test.sh  mirror_test.sh  proxy_test.sh  shutdown_test.sh
e2e/src/test/java/com/example/rbs/e2e/: E2eTestClient.java
e2e/test_tools/: BUILD  verifier.go
infra/: BUILD  Dockerfile  entrypoint.sh  kind-config.yaml  schema.sql
infra/k8s/: orchestrator.yaml
jbazel/: BUILD  README.md
jbazel/src/: BUILD.bazel  main.go
orchestrator/: BUILD  README.md
orchestrator/src/main/java/com/example/rbs/: ComputeService.java  KubernetesComputeService.java  OrchestratorServer.java  OrchestratorService.java  ProcessComputeService.java  Repositories.java  SessionRepository.java  Telemetry.java  TracingInterceptor.java
orchestrator/src/main/proto/: orchestrator.proto
orchestrator/src/test/java/com/example/rbs/: KubernetesComputeServiceTest.java  OrchestratorServiceTest.java  ProcessComputeService.java  ProcessLifecycleTest.java
proxy/: BUILD  README.md
proxy/src/: main.go  region.go
tools/rbs_javabase/: BUILD
