module(
    name = "remote-build-server",
    version = "0.0.1",
)

bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc-java", version = "1.77.0", repo_name = "io_grpc_grpc_java")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.5.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")

archive_override(
    module_name = "grpc-java",
    strip_prefix = "grpc-java-1.77.0",
    urls = ["https://github.com/grpc/grpc-java/archive/refs/tags/v1.77.0.tar.gz"],
)

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)
use_repo(protoc, "toolchains_protoc_hub")

register_toolchains("@toolchains_protoc_hub//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.grpc:grpc-netty-shaded:1.69.0",  # 1.77.0 might not be on maven central yet or I should double check. Let's try 1.69.0 or checking what's available. Actually 1.64.0 was used in the other repo. Let's conservatively bump.
        "io.grpc:grpc-protobuf:1.69.0",
        "io.grpc:grpc-stub:1.69.0",
        "io.grpc:grpc-api:1.69.0",
        "com.google.cloud:google-cloud-spanner:6.56.0",
        "io.fabric8:kubernetes-client:6.10.0",
        "org.projectlombok:lombok:1.18.30",
        "org.slf4j:slf4j-simple:2.0.9",
        "javax.annotation:javax.annotation-api:1.3.2",
        "io.netty:netty-tcnative-boringssl-static:2.0.61.Final",
        "io.netty:netty-transport:4.1.100.Final",
        "io.netty:netty-transport-native-unix-common:4.1.100.Final",
        "com.google.api.grpc:proto-google-common-protos:2.29.0",
        "junit:junit:4.13.2",
        "org.mockito:mockito-core:5.11.0",
        "org.assertj:assertj-core:3.27.0",
        "io.fabric8:kubernetes-server-mock:6.10.0",
        "io.fabric8:kubernetes-server-mock:6.10.0",
        "com.squareup.okhttp3:mockwebserver:4.11.0",
        # Observability
        "io.opentelemetry:opentelemetry-api:1.36.0",
        "io.opentelemetry:opentelemetry-sdk:1.36.0",
        "io.opentelemetry:opentelemetry-sdk-common:1.36.0",
        "io.opentelemetry:opentelemetry-sdk-trace:1.36.0",
        "io.opentelemetry:opentelemetry-exporter-logging:1.36.0",
        # "io.opentelemetry:opentelemetry-extension-annotations:1.36.0", # Not found
        "io.grpc:grpc-services:1.69.0",  # For generic observability services if needed
        "ch.qos.logback:logback-classic:1.5.3",  # SLF4J implementation
        "net.logstash.logback:logstash-logback-encoder:7.4",  # JSON encoder
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "kind",
    executable = True,
    urls = ["https://github.com/kubernetes-sigs/kind/releases/download/v0.20.0/kind-darwin-arm64"],
)

http_file(
    name = "kubectl",
    executable = True,
    urls = ["https://dl.k8s.io/release/v1.29.0/bin/darwin/arm64/kubectl"],
)

bazel_dep(name = "rules_oci", version = "1.7.4")
bazel_dep(name = "rules_pkg", version = "0.10.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    image = "docker.io/library/eclipse-temurin",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "17-jre",
)
use_repo(oci, "distroless_java")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_cobra",
    "com_github_bazelbuild_bazelisk",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
