load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/remote-build-server/jbazel/src",
    visibility = ["//visibility:private"],
    deps = [
        "//orchestrator:orchestrator_go_grpc",
        "@com_github_bazelbuild_bazelisk//core",
        "@com_github_bazelbuild_bazelisk//repositories",
        "@com_github_spf13_cobra//:cobra",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.17.0:v1_17_0",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:stdouttrace",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "jbazel",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
